--- a/src/components/RocketList/RocketList.module.css
+++ b/src/components/RocketList/RocketList.module.css
@@ -1,32 +1,38 @@
-.rocketList {
+.container {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
   overflow: hidden auto;
-  padding: 20px 0;
+  padding: 10px 30px 30px;
+  box-sizing: border-box;
 }
 
-.heading {
-  padding: 20px 30px;
+.form {
+  display: flex;
+  margin: 0 0 30px;
 }
 
 .items {
-  list-style: none;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  padding: 0 30px;
+  list-style: none;
 }
 
 .item {
   padding: 20px 0;
-  border-top: 1px solid #373737;
+  border-bottom: 1px solid #373737;
   cursor: pointer;
   transition: font-weight linear 0.1s;
 }
 
 .item:hover, .active_item {
   font-weight: bold;
+}
+
+.items .item:last-child {
+  border-bottom: none;
 }
 
 .description {
@@ -39,4 +45,8 @@
 
 .description *:first-child {
   margin-right: 8px;
+}
+
+.resultsError {
+  margin-top: 20px;
 }
